# nxt-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/core/: config.py  db.py  security.py
app/di/: case_providers.py  user_provider.py
app/exceptions/: domain_exceptions.py  handler.py  technical_exceptions.py
app/repositories/: case_repository.py  user_repository.py
app/routers/: auth.py  cases.py
app/schemas/: case.py
app/services/: case_service.py  user_service.py
